<resources>
    <string name="app_name">TipCaluculater</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="ask_how_was_service">How was the service?</string>
    <string name="cost_of_service_for_hint_in_text_field">Cost of Service</string>

    <string name="amazing_option">Amazing (%20)</string>
    <string name="good_option">Good (%18)</string>
    <string name="ok_option">OK (%15)</string>
    <string name="round_up_tip">Round up Tip?</string>
    <string name="calculationbutton_text">calculate</string>
    <string name="tip_amount_text_view_text">Tip Amount: %1$s</string>
    <string name="none_value">0.0</string>
</resources>