<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/roundUpTipLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/bottomsection_of_screen_guide">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.75"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_call_made_24"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="325dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_round_up_tip"
            style="@style/Widget.TipCaluculater.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/round_up_tip" />


    </LinearLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/roundUpTipLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topsection_of_screen_guide"
        >

        <LinearLayout
            android:id="@+id/how_was_the_service_view_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0.75"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_store" />

                <TextView
                    style="@style/Widget.TipCaluculater.TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/ask_how_was_service" />

            </LinearLayout>


            <RadioGroup
                android:id="@+id/radioGroup"
                style="@style/Widget.TipCaluculater.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_weight="2.5"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_twenty_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing_option"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/option_eighteen_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/good_option"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/option_fifteen_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_option"
                    android:textColor="@color/black" />

            </RadioGroup>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/service_cost_viewgroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/topsection_of_screen_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1.5"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_service" />

       <com.google.android.material.textfield.TextInputLayout
          android:layout_marginTop="5dp"
           android:layout_width="wrap_content"
           android:layout_weight="10"
           android:layout_height="wrap_content">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="200dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:layout_marginEnd="10dp"
               android:id="@+id/etCostOfService"
               android:inputType="numberDecimal"
               android:layout_height="wrap_content"
               android:hint="@string/cost_of_service_for_hint_in_text_field"

               />
       </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/buttonOfCalculation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/calculationbutton_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomsection_of_screen_guide" />

    <TextView
        android:id="@+id/textView_tipOfAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.TipCaluculater.TextView"
        android:text="@string/none_value"
        app:layout_constraintEnd_toEndOf="@+id/buttonOfCalculation"
        app:layout_constraintTop_toBottomOf="@+id/buttonOfCalculation" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topsection_of_screen_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomsection_of_screen_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />




</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>